<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.neon.vyaan.activity.MyProfileActivity">

    <LinearLayout
        android:id="@+id/containerImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/background_nav_header"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blackSeventyPercentTransparent"
            android:gravity="center"
            android:orientation="vertical">


            <com.neon.vyaan.widgets.CircularImageView
                android:id="@+id/circularProfileImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:adjustViewBounds="true"
                android:background="@drawable/bg_white_circular_img"
                android:padding="4dp"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_user"></com.neon.vyaan.widgets.CircularImageView>


            <TextView
                android:id="@+id/textUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/label_text_user_name"
                android:textColor="@color/text_nav_menu_items"
                android:textSize="@dimen/font_large"
                android:visibility="gone"/>
        </LinearLayout>

    </LinearLayout>
    <!--    <LinearLayout
            android:id="@+id/containerImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">


            <com.neon.vyaan.widgets.CircularImageView
                android:id="@+id/circularProfileImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"/>

        </LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_large"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_text_name"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/font_large"/>


        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/label_email"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/font_large"/>


        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/label_phone_number"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/font_large"/>


        <EditText
            android:id="@+id/editPhoneNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone_number"
            android:inputType="number"/>


        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@color/colorPrimary"
            android:text="@string/labelSave"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/font_large"/>


        <TextView
            android:id="@+id/textChangePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/label_change_password"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/font_xlarge"/>
    </LinearLayout>
</LinearLayout>
